@@ -1350,6 +1350,8 @@ var CommandLine = Module("commandline", {
         arg = dactyl.userEval(arg);
         if (isObject(arg))
             arg = util.objectToString(arg, useColor);
+        else if (callable(arg))
+            arg = String(arg);
         else if (!isString(arg) && useColor)
             arg = template.highlight(arg);
         return arg;
